--- a/package.json
+++ b/package.json
@@ -147,7 +147,9 @@
     "@slack/web-api": "^7.13.0",
     "@whiskeysockets/baileys": "7.0.0-rc.9",
     "ajv": "^8.17.1",
+    "better-sqlite3": "^12.6.0",
     "body-parser": "^2.2.2",
+    "busboy": "^1.6.0",
     "chalk": "^5.6.2",
     "chokidar": "^5.0.0",
     "chromium-bidi": "12.0.1",
@@ -161,6 +163,7 @@
     "grammy": "^1.39.2",
     "jiti": "^2.6.1",
     "json5": "^2.2.3",
+    "jsonwebtoken": "^9.0.3",
     "long": "5.3.2",
     "markdown-it": "^14.1.0",
     "node-llama-cpp": "3.14.5",
@@ -180,8 +183,11 @@
     "@lit-labs/signals": "^0.2.0",
     "@lit/context": "^1.1.6",
     "@mariozechner/mini-lit": "0.2.1",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/body-parser": "^1.19.6",
+    "@types/busboy": "^1.5.4",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^25.0.6",
     "@types/proper-lockfile": "^4.1.4",
@@ -211,7 +217,16 @@
     },
     "patchedDependencies": {
       "@mariozechner/pi-ai@0.45.7": "patches/@mariozechner__pi-ai@0.45.7.patch"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@whiskeysockets/baileys",
+      "authenticate-pam",
+      "better-sqlite3",
+      "esbuild",
+      "node-llama-cpp",
+      "protobufjs",
+      "sharp"
+    ]
   },
   "vitest": {
     "coverage": {
