--- a/package.json
+++ b/package.json
@@ -150,7 +150,9 @@
     "@slack/web-api": "^7.13.0",
     "@whiskeysockets/baileys": "7.0.0-rc.9",
     "ajv": "^8.17.1",
+    "better-sqlite3": "^12.6.0",
     "body-parser": "^2.2.2",
+    "busboy": "^1.6.0",
     "chalk": "^5.6.2",
     "chokidar": "^5.0.0",
     "chromium-bidi": "12.0.1",
@@ -164,6 +166,7 @@
     "grammy": "^1.39.2",
     "hono": "4.11.4",
     "jiti": "^2.6.1",
+    "jsonwebtoken": "^9.0.3",
     "json5": "^2.2.3",
     "jszip": "^3.10.1",
     "linkedom": "^0.18.12",
@@ -190,8 +193,11 @@
     "@lit-labs/signals": "^0.2.0",
     "@lit/context": "^1.1.6",
     "@mariozechner/mini-lit": "0.2.1",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/busboy": "^1.5.4",
     "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^25.0.6",
     "@types/proper-lockfile": "^4.1.4",
