--- a/package.json
+++ b/package.json
@@ -161,6 +161,8 @@
     "@whiskeysockets/baileys": "7.0.0-rc.9",
     "ajv": "^8.17.1",
     "body-parser": "^2.2.2",
+    "better-sqlite3": "12.6.2",
+    "busboy": "1.6.0",
     "chalk": "^5.6.2",
     "chokidar": "^5.0.0",
     "chromium-bidi": "12.0.1",
@@ -175,6 +177,7 @@
     "hono": "4.11.4",
     "jiti": "^2.6.1",
     "json5": "^2.2.3",
+    "jsonwebtoken": "9.0.3",
     "jszip": "^3.10.1",
     "linkedom": "^0.18.12",
     "long": "5.3.2",
@@ -201,7 +204,10 @@
     "@lit/context": "^1.1.6",
     "@mariozechner/mini-lit": "0.2.1",
     "@types/body-parser": "^1.19.6",
+    "@types/better-sqlite3": "7.6.13",
+    "@types/busboy": "1.5.4",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "9.0.10",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^25.0.9",
     "@types/proper-lockfile": "^4.1.4",
