--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,6 +7,7 @@ onlyBuiltDependencies:
   - '@whiskeysockets/baileys'
   - '@lydell/node-pty'
   - authenticate-pam
+  - better-sqlite3
   - esbuild
   - protobufjs
   - sharp
