Rebase onto upstream main with Clawline changes

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ packages:
 
 onlyBuiltDependencies:
   - "@whiskeysockets/baileys"
+  - better-sqlite3
   - "@lydell/node-pty"
   - "@matrix-org/matrix-sdk-crypto-nodejs"
   - authenticate-pam
