--- a/package.json
+++ b/package.json
@@ -169,6 +169,8 @@
     "@slack/web-api": "^7.13.0",
     "@whiskeysockets/baileys": "7.0.0-rc.9",
     "ajv": "^8.17.1",
+    "better-sqlite3": "12.6.2",
+    "busboy": "1.6.0",
     "chalk": "^5.6.2",
     "chokidar": "^5.0.0",
     "cli-highlight": "^2.1.11",
@@ -181,6 +183,7 @@
     "grammy": "^1.39.3",
     "jiti": "^2.6.1",
     "json5": "^2.2.3",
+    "jsonwebtoken": "9.0.3",
     "jszip": "^3.10.1",
     "linkedom": "^0.18.12",
     "long": "^5.3.2",
@@ -205,7 +208,10 @@
     "@grammyjs/types": "^3.23.0",
     "@lit-labs/signals": "^0.2.0",
     "@lit/context": "^1.1.6",
+    "@types/better-sqlite3": "7.6.13",
+    "@types/busboy": "1.5.4",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "9.0.10",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^25.1.0",
     "@types/proper-lockfile": "^4.1.4",
