Upstream merge: align + fix Clawline tests

--- a/package.json
+++ b/package.json
@@ -216,6 +216,7 @@
       "@napi-rs/canvas",
       "@whiskeysockets/baileys",
       "authenticate-pam",
+      "better-sqlite3",
       "esbuild",
       "node-llama-cpp",
       "protobufjs",
